[package]
name = "deploy_aws_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
walkdir = "2"
sha2 = "0.10"
base16ct = { version = "0.2.0", features = ["alloc"] }
bytes = { version = "1.6.0", features = ["std"] }

aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.38.0", features = ["rt-tokio", "behavior-version-latest"] }
tokio = { version = "1.38.0", features = ["full"] }
#magic = "0.16.2"
mime_guess = "2.0.5"
